<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/munje_4"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.10"
        android:weightSum="1"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0.95"
            />
        <Button
            android:id="@+id/buttonBackScoreLvl"
            android:background="@null"
            android:layout_weight="0.05"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/back0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:gravity="center"
            android:minWidth="100dp"
            android:onClick="povratakEndLvl" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="0.3"
         />
    <Button
        android:id="@+id/buttonLocalScore"
        android:layout_weight="0.05"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localScore0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:background="@null"
        android:onClick="otvoriLocalScoreView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="0.1"
         />

    <Button
        android:id="@+id/buttonOnlineScore"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:text="@string/onlineScore0"
        android:background="@null"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:onClick="otvoriOnlineScoreView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="0.4"
        />

</LinearLayout>